# agentkit

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.base  LICENSE  README.md  cli_client.py  config.py  install_gitea_mcp.sh  main.py  package-lock.json  pyproject.toml
.github/workflows/: build-wheel.yml  docker-build.yml
agentkit/: agent.py  config.py  conversation_db.py  history.py  lifespan.py  main.py  mcp_manager.py  registry.py  server.py  tools.py  webui.py
agentkit/agents/: __init__.py  agent.py  base.py  manager.py  react.py  registry.py  streaming.py  structured.py
agentkit/chatbots/: __init__.py  assistant.py  base.py  chatbot.py  config.py  factory.py  manager.py  plugin.py  react.py  registry.py
agentkit/connectors/: __init__.py  client_base.py  forgejo.py  github.py  registry.py
agentkit/db/: __init__.py  db.py  migrations.py  models.py
agentkit/github/: __init__.py  client.py
agentkit/mcps/: manager.py
agentkit/models/: __init__.py  model.py  registry.py
agentkit/providers/: __init__.py  client_base.py  provider.py  registry.py
agentkit/repo_browser/: __init__.py  github.py
agentkit/routes/: __init__.py  approvals.py  chats.py  config.py  connectors.py  files.py  github.py  media.py  models.py  repo_browser.py  schemas.py  skills.py  tools.py
agentkit/services/: __init__.py  chat_naming.py  chat_service.py  (+5 more)
mikoshi/: config.py  lifespan.py  main.py  middleware.py  server.py  storage.py  webui.py  workspace.py
scripts/: migrate_files_v2.py
webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+102 files in other folders)
